# task_4_9

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/student/: Student.cpp  Student.h
src/students_list/: StudentList.cpp  StudentList.h  StudentListNode.cpp  StudentListNode.h
src/ui/: MainFrame.ui  MainWindow.cpp  MainWindow.h  ui_MainFrame.h
test/: CMakeLists.txt  gtest.cpp
test/tests/: test1.cpp  text.txt
